--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Trigger Deploy Terraform
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   trigger_deploy:
@@ -13,5 +14,6 @@ jobs:
       uses: peter-evans/repository-dispatch@v2
       with:
         token: ${{ secrets.REPO_DISPATCH_TOKEN }}
-        repository: 'https://github.com/yesaswi/test-serverless-cd'
+        repository: yesaswi/test-serverless-cd
         event-type: deploy-function
+        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
